@@ -208,7 +208,8 @@ distdir: $(DISTFILES)
 ## Make sure to remove the dist file we created in the test build
 ## directory.
 ?TOPDIR?	  && rm -f $(distdir).tar.gz \
-?TOPDIR?	  && test `find . -type f -print | wc -l` -eq 0
+?TOPDIR?	  && test `find . -type f -print | wc -l` -ne 0 \
+?TOPDIR?	  && (echo "Error: files left after distclean" 1>&2; exit 1)
 ?TOPDIR?	-chmod -R a+w $(distdir) > /dev/null 2>&1; rm -rf $(distdir)
 ?TOPDIR?	@echo "$(distdir).tar.gz is ready for distribution" | \
 ?TOPDIR?	  sed 'h;s/./=/g;p;x;p;x'
