@@ -1,3 +1,8 @@
+2001-02-27  Tom Tromey  <tromey@redhat.com>
+
+	* distdir.am (distcheck): Print error message if distclean failed
+	to fully clean.
+
 2001-02-27  Pavel Roskin  <proski@gnu.org>
 
 	* tests/Makefile.am (TESTS): s/yaccpvath/yaccvpath/.
